# coding-learning

./: .gdb_history  .gitignore  README.md
note/: adjacency-patch不显示.md
opengl/colortriangle/: CMakeLists.txt  compile.sh  rebuild.sh
opengl/colortriangle/colortriangle/: utils.hpp
opengl/colortriangle/shader/: colortriangle.frag  colortriangle.vert
opengl/colortriangle/src/: main.cpp  utils.cpp
rust-vulkan/: Cargo.toml
rust-vulkan/src/: 00_base_vulkan_framework.rs  00_base_window.rs  01_base_instance_test.rs  02_validation_layers.rs  03_pyhsical_device_selection.rs  04_logical_device.rs  05_window_surface.rs  100_vulano_triangle.rs  101_vulkano_triangle.rs  102_sdl_vulkano_example.rs  103_zhiyu_vulkano_example.rs
rust/video-sdl2/: Cargo.toml
rust/video-sdl2/src/: main.rs
vulkan/: README.md
vulkan/little-vulkan-engine/: CMakeLists.txt  compiler.sh
vulkan/little-vulkan-engine/cmake/: CMakeLists.txt
vulkan/little-vulkan-engine/lve/: lve_pipeline.hpp  lve_windows.hpp
vulkan/little-vulkan-engine/shader/: shader.frag  shader.vert
vulkan/little-vulkan-engine/src/: lve_pipeline.cpp  lve_windows.cpp  main.cpp
vulkan/toy2d-cpp/: CMakeLists.txt  compiler.sh  frag.spv  rebuild.sh  shader-compiler.sh  vert.spv
vulkan/toy2d-cpp/cmake/: CopyFiles.cmake  FindSDL2.cmake  FindVulkan.cmake
vulkan/toy2d-cpp/sandbox/: CMakeLists.txt  sandbox.cpp
vulkan/toy2d-cpp/shader/: shader.frag  shader.vert
vulkan/toy2d-cpp/src/: buffer.cpp  context.cpp  render.cpp  renderpass.cpp  renderprocess.cpp  shader.cpp  swapchain.cpp  texture.cpp  tool.cpp  toy2d.cpp
vulkan/toy2d-cpp/toy2d/: buffer.hpp  context.hpp  render.hpp  renderpass.hpp  renderprocess.hpp  shader.hpp  stb_image.hpp  swapchain.hpp  texture.hpp  tool.hpp  toy2d.hpp
