[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
log = "0.4.21"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.6.0"
softbuffer = "0.4.1"
thiserror = "1.0.58"
vulkanalia = { version = "0.22.0", features = ["libloading", "provisional", "window"] }
winit = { version = "0.29.15", features = ["rwh_05"] }

[[bin]]

name = "00_base_window"
path = "src/00_base_window.rs"

[[bin]]

name = "00_base_vulkan_framework"
path = "src/00_base_vulkan_framework.rs"

[[bin]]

name = "01_base_instance_test"
path = "src/01_base_instance_test.rs"

[[bin]]

name = "02_validation_layers"
path = "src/02_validation_layers.rs"
