[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytemuck = "1.16.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.6.0"
softbuffer = "0.4.1"
thiserror = "1.0.58"
vulkanalia = { version = "0.23.0", features = [
    "libloading",
    "provisional",
    "window",
] }
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
winit = { version = "0.30.0", features = ["rwh_05"] }

[[example]]

name = "00_base_window"
path = "src/00_base_window.rs"

[[example]]

name = "00"
path = "src/00_base_vulkan_framework.rs"

[[example]]

name = "01"
path = "src/01_base_instance_test.rs"

[[example]]

name = "02"
path = "src/02_validation_layers.rs"

[[example]]

name = "03"
path = "src/03_pyhsical_device_selection.rs"

[[example]]

name = "04"
path = "src/04_logical_device.rs"

[[example]]

name = "05"
path = "src/05_window_surface.rs"

[[example]]

name = "103"
path = "src/103_zhiyu_vulkano_example.rs"

